verification_results.txt
🔍 Verifying C++ code blocks in 14 file(s)...


============================================================
  ✅ PASS  01.md
  Blocks: 17 total, 8 compilable, 9 skipped
  Units: 1
============================================================

============================================================
  ✅ PASS  02.md
  Blocks: 22 total, 13 compilable, 9 skipped
  Units: 1
============================================================

============================================================
  ❌ FAIL  03.md
  Blocks: 14 total, 9 compilable, 5 skipped
  Units: 1
============================================================
  ❌ test_advanced_field.C (md lines 344-391)
     In file included from test_advanced_field.C:1:
     advanced_geometric_field.H:4:10: fatal error: 'geometric_field.H' file not found
         4 | #include "geometric_field.H"  // From Day 02
           |          ^~~~~~~~~~~~~~~~~~~
     1 error generated.

  ⚠️  1 compilation failure(s):
     • test_advanced_field.C (line 344): advanced_geometric_field.H:4:10: fatal error: 'geometric_field.H' file not found

============================================================
  ✅ PASS  04.md
  Blocks: 10 total, 5 compilable, 5 skipped
  Units: 1
============================================================

============================================================
  ❌ FAIL  05.md
  Blocks: 6 total, 3 compilable, 3 skipped
  Units: 1
============================================================
  ❌ test_policy.C (md lines 264-298)
     In file included from test_policy.C:1:
     policy_solver.H:11:55: warning: unused parameter 'residual' [-Wunused-parameter]
        11 |     bool shouldContinue(int iter, int maxIter, double residual = 0) const
           |                                                       ^
     policy_solver.H:36:41: warning: unused parameter 'oldValue' [-Wunused-parameter]
     ... (30 more lines)

  ⚠️  1 compilation failure(s):
     • test_policy.C (line 264): policy_solver.H:81:46: error: no matching constructor for initialization of 'UnderRelaxation'

============================================================
  ✅ PASS  06.md
  Blocks: 8 total, 2 compilable, 6 skipped
  Units: 1
============================================================

============================================================
  ✅ PASS  07.md
  Blocks: 8 total, 3 compilable, 5 skipped
  Units: 1
============================================================

============================================================
  ✅ PASS  08.md
  Blocks: 7 total, 4 compilable, 3 skipped
  Units: 1
============================================================

============================================================
  ❌ FAIL  09.md
  Blocks: 9 total, 7 compilable, 2 skipped
  Units: 1
============================================================
  ❌ test_expressions.C (md lines 260-314)
     test_expressions.C:25:36: error: invalid operands to binary expression ('BinaryOp<Variable<double>, Variable<double>, Add>' and 'Literal<double>')
        25 |     auto expr2 = (var(a) + var(b)) * lit(2.0) + var(c);
           |                  ~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~
     1 error generated.

  ⚠️  1 compilation failure(s):
     • test_expressions.C (line 260): test_expressions.C:25:36: error: invalid operands to binary expression ('BinaryOp<Variable<double>, Variable<double>, Add>' and 'Literal<double>')

============================================================
  ✅ PASS  10.md
  Blocks: 11 total, 6 compilable, 5 skipped
  Units: 1
============================================================

============================================================
  ❌ FAIL  11.md
  Blocks: 6 total, 3 compilable, 3 skipped
  Units: 1
============================================================
  ❌ test_iterators.C (md lines 215-284)
     test_iterators.C:8:19: error: no matching constructor for initialization of 'Field<double>'
         8 |     Field<double> p("pressure", 10, 101325.0);
           |                   ^ ~~~~~~~~~~~~~~~~~~~~~~~~
     iterator_support.H:25:5: note: candidate constructor not viable: no known conversion from 'const char[9]' to 'std::size_t' (aka 'unsigned long') for 1st argument
        25 |     Field(std::size_t n, const T& val, const std::string& name = "field")
     ... (11 more lines)

  ⚠️  1 compilation failure(s):
     • test_iterators.C (line 215): test_iterators.C:8:19: error: no matching constructor for initialization of 'Field<double>'

============================================================
  ❌ FAIL  12.md
  Blocks: 7 total, 3 compilable, 4 skipped
  Units: 1
============================================================
  ❌ test_traits.C (md lines 227-274)
     test_traits.C:20:16: error: type 'Field<double>' does not provide a subscript operator
        20 |     scalarField[0] = 3.0;
           |     ~~~~~~~~~~~^~
     test_traits.C:21:16: error: type 'Field<double>' does not provide a subscript operator
        21 |     scalarField[1] = 4.0;
     ... (2 more lines)

  ⚠️  1 compilation failure(s):
     • test_traits.C (line 227): test_traits.C:20:16: error: type 'Field<double>' does not provide a subscript operator

============================================================
  ❌ FAIL  13.md
  Blocks: 3 total, 3 compilable, 0 skipped
  Units: 1
============================================================
  ❌ test_phase1.C (md lines 387-440)
     test_phase1.C:11:17: error: no matching constructor for initialization of 'scalarField' (aka 'Field<double>')
        11 |     scalarField p("pressure", 5, 101325.0);
           |                 ^ ~~~~~~~~~~~~~~~~~~~~~~~
     field.H:46:5: note: candidate constructor not viable: no known conversion from 'const char[9]' to 'std::size_t' (aka 'unsigned long') for 1st argument
        46 |     Field(std::size_t n, const T& val, const std::string& name = "field")
     ... (68 more lines)

  ⚠️  1 compilation failure(s):
     • test_phase1.C (line 387): test_phase1.C:11:17: error: no matching constructor for initialization of 'scalarField' (aka 'Field<double>')

============================================================
  ❌ FAIL  14.md
  Blocks: 3 total, 3 compilable, 0 skipped
  Units: 2
============================================================
  ❌ benchmark.C (md lines 155-247)
     benchmark.C:1:10: fatal error: 'field.H' file not found
         1 | #include "field.H"
           |          ^~~~~~~~~
     1 error generated.
  ❌ test_integration.C (md lines 257-386)
     test_integration.C:1:10: fatal error: 'field.H' file not found
         1 | #include "field.H"
           |          ^~~~~~~~~
     1 error generated.

  ⚠️  2 compilation failure(s):
     • benchmark.C (line 155): benchmark.C:1:10: fatal error: 'field.H' file not found
     • test_integration.C (line 257): test_integration.C:1:10: fatal error: 'field.H' file not found

============================================================
  SUMMARY: 7/14 files passed
  ❌ 7 file(s) with compilation errors:
     • 03.md: 1 error(s)
     • 05.md: 1 error(s)
     • 09.md: 1 error(s)
     • 11.md: 1 error(s)
     • 12.md: 1 error(s)
     • 13.md: 1 error(s)
     • 14.md: 2 error(s)
============================================================

